testsuite/tests/parser/should_fail/T3811f.hs

module T3811f where

class !Foo a
